--- a/source/assemble/templates/layouts/page.hbs
+++ b/source/assemble/templates/layouts/page.hbs
@@ -1,6 +1,9 @@
-{{>site-header}}
-	<div class="page-content">
-		<!--h2>{{this.page.title}}</h2-->
-		{{>body}}
+{{>html-header}}
+	{{>site-nav}}
+	<div class="page-wrapper">
+		<div class="page-content">
+			<!--h2>{{this.page.title}}</h2-->
+			{{>body}}
+		</div>
 	</div>
-{{>site-footer}}
+{{>html-footer}}
