simple scss files

--- a/source/sass/variables/_colors.scss
+++ b/source/sass/variables/_colors.scss
@@ -1,2 +1,5 @@
-$text-color-dark: 	#222;
-$text-color-bright: #eee;
+$text-color-100: #666; // grey
+$text-color-200: #fff; // white
+$text-color-300: #000; // black
+
+$link-color-100: #1a0dab; // blue
