--- a/source/sass/_navigation.scss
+++ b/source/sass/_navigation.scss
@@ -1,3 +1,14 @@
-nav {
-	display: block;
+.nav-main {
+	ul {
+		padding: 0;
+		margin: 0;
+		li {
+			list-style: none;
+			&.active {
+				a {
+					color: blue;
+				}
+			}
+		}
+	}
 }
