--- a/source/assemble/templates/layouts/page.hbs
+++ b/source/assemble/templates/layouts/page.hbs
@@ -1,9 +1,10 @@
 {{>html-header}}
 	{{>site-nav}}
 	<div class="page-wrapper">
-		<div class="page-content">
+		<section class="section-main">
 			<!--h2>{{this.page.title}}</h2-->
 			{{>body}}
-		</div>
+		</section>
+		{{>site-sidebar}}
 	</div>
 {{>html-footer}}
