--- a/source/sass/_basics.scss
+++ b/source/sass/_basics.scss
@@ -1,6 +1,20 @@
+*,
+*:before,
+*:after {
+	box-sizing: border-box; 
+}
+
+html {
+	overflow-y: scroll;
+	overflow-x: hidden;
+}
+
 body {
-	font-family: sans-serif;
-	line-height: 1.6em;
+	font-family: $base-fontfamily;
+	font-size: $base-fontsize;
+	font-weight: $base-fontweight;
+	line-height: $base-lineheight;
+	text-rendering: optimizeLegibility;
 	color: $text-color-100;
 }
 
