--- a/source/sass/_navigation.scss
+++ b/source/sass/_navigation.scss
@@ -2,11 +2,21 @@
 	ul {
 		padding: 0;
 		margin: 0;
+		@include clearfix;
 		li {
 			list-style: none;
+			@include breakpoint(tablet) {
+				float: left;
+			}
 			&.active {
 				a {
 					color: $text-color-300;
+				}
+			}
+			a {
+				display: block;
+				@include breakpoint(tablet) {
+					padding: 15px;
 				}
 			}
 		}
