--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -1,5 +1,6 @@
 @import "compass";
 @import "variables/**/*";
+@import "mixins/**/*";
 @import "basics";
 @import "template";
 @import "navigation";
