--- a/source/sass/_navigation.scss
+++ b/source/sass/_navigation.scss
@@ -2,22 +2,47 @@
 	ul {
 		padding: 0;
 		margin: 0;
+
 		@include clearfix;
+
 		li {
 			list-style: none;
 			@include breakpoint(tablet) {
 				float: left;
-			}
-			&.active {
-				a {
-					color: $text-color-300;
-				}
 			}
 			a {
 				display: block;
 				@include breakpoint(tablet) {
 					padding: 15px;
 				}
+			}
+			&.active {
+				a {
+					color: $text-color-300;
+				}
+			}
+
+			&:hover {
+				@include breakpoint(tablet) {
+					ul {
+						display: block;
+						position: absolute;
+						background: $nav-ul-bg;
+						li {
+							float: none;
+						}
+						a {
+							padding: 5px 15px;
+						}
+					}
+				}
+			}
+
+		}
+
+		ul {
+			@include breakpoint(tablet) {
+				display: none;
 			}
 		}
 	}
