--- a/source/sass/variables/_colors.scss
+++ b/source/sass/variables/_colors.scss
@@ -1,5 +1,7 @@
-$text-color-100: #666; // grey
-$text-color-200: #fff; // white
-$text-color-300: #000; // black
+$text-color-100: 	#666; // grey
+$text-color-200: 	#fff; // white
+$text-color-300: 	#000; // black
 
-$link-color-100: #1a0dab; // blue
+$link-color-100: 	#1a0dab; // blue
+
+$nav-ul-bg: 		#fff; // white
