dummy header image added

--- a/source/assemble/templates/layouts/page.hbs
+++ b/source/assemble/templates/layouts/page.hbs
@@ -1,5 +1,6 @@
 {{>html-header}}
 	{{>site-nav}}
+	<img src="img/header.jpg" alt="" class="img-header">
 	<div class="page-wrapper">
 		<section class="section-main">
 			<!--h2>{{this.page.title}}</h2-->
