--- a/source/assemble/templates/partials/site-nav.hbs
+++ b/source/assemble/templates/partials/site-nav.hbs
@@ -1,21 +1,20 @@
-<div class="page-wrapper">
-	<nav class="nav-main">
-		<ul>
-			<li{{#is basename "index"}} class="active"{{/is}}>
-				<a href="index.html">Home</a>
-				<ul>
-					<li><a href="index.html">Subpage</a></li>
-					<li><a href="index.html">Subpage</a></li>
-					<li><a href="index.html">Subpage</a></li>
-					<li><a href="index.html">Subpage</a></li>
-					<li><a href="index.html">Subpage</a></li>
-					<li><a href="index.html">Subpage</a></li>
-				</ul>
-			</li>
-			<li{{#is basename "page2"}} class="active"{{/is}}><a href="page2.html">Page2</a></li>
-			<li{{#is basename "page3"}} class="active"{{/is}}><a href="page3.html">Page3</a></li>
-			<li{{#is basename "page4"}} class="active"{{/is}}><a href="page4.html">Page4</a></li>
-			<li{{#is basename "page5"}} class="active"{{/is}}><a href="page5.html">Page5</a></li>
-		</ul>
-	</nav>
-</div>
+<nav class="nav-main">
+	<ul>
+		<li{{#is basename "index"}} class="active"{{/is}}>
+			<a href="index.html">Learn</a>
+			<ul>
+				<li><a href="index.html">Features</a></li>
+				<li><a href="index.html">FAQ</a></li>
+				<li><a href="index.html">Case Studies</a></li>
+				<li><a href="index.html">Website Examples</a></li>
+				<li><a href="index.html">Videos</a></li>
+				<li><a href="index.html">Training</a></li>
+				<li><a href="index.html">About</a></li>
+			</ul>
+		</li>
+		<li{{#is basename "page2"}} class="active"{{/is}}><a href="page2.html">Develop</a></li>
+		<li{{#is basename "page3"}} class="active"{{/is}}><a href="page3.html">Support</a></li>
+		<li{{#is basename "page4"}} class="active"{{/is}}><a href="page4.html">Buisness</a></li>
+		<li{{#is basename "page5"}} class="active"{{/is}}><a href="page5.html">Docs</a></li>
+	</ul>
+</nav>
