--- a/source/sass/variables/_colors.scss
+++ b/source/sass/variables/_colors.scss
@@ -1,7 +1,9 @@
-$text-color-100: 	#666; // grey
-$text-color-200: 	#fff; // white
-$text-color-300: 	#000; // black
+$text-color-100: 	#666;
+$text-color-200: 	#fff;
+$text-color-300: 	#000;
 
-$link-color-100: 	#666; // grey
+$link-color-100: 	#666;
 
-$nav-ul-bg: 		#fff; // white
+$header-bg: 		#222;
+$nav-ul-bg: 		#222;
+$nav-hover-bg: 		#111;
