--- a/source/sass/variables/_typography.scss
+++ b/source/sass/variables/_typography.scss
@@ -1,4 +1,8 @@
-$base-fontfamily: Sans-Serif;
-$base-fontweight: 400;
+/* $base-fontfamily: Sans-Serif; */
+$base-fontfamily: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+
+$base-fontweight: normal;
 $base-fontsize: 16px;
 $base-lineheight: 1.6em;
+
+$nav-font-size: 14px;
