--- a/source/sass/_basics.scss
+++ b/source/sass/_basics.scss
@@ -5,6 +5,7 @@
 }
 
 html {
+	-webkit-font-smoothing: antialiased;
 	overflow-y: scroll;
 	overflow-x: hidden;
 }
@@ -30,7 +31,17 @@ a {
 	}
 }
 
+hr {
+	border: solid #dddddd;
+	border-width: 1px 0 0;
+	clear: both;
+	margin: 1.25rem 0 1.1875rem;
+	height: 0;
+}
+
 .page-wrapper {
+	@include clearfix;
 	max-width: $page-wrapper-width;
 	margin: 0 auto;
+	padding: 0 15px;
 }
