--- a/source/sass/_template.scss
+++ b/source/sass/_template.scss
@@ -9,15 +9,62 @@ body {
 	margin: 0;
 }
 
-.img-header {
-	width: 100%;
-	height: auto;
+.header-main {
+	background: #222;
+}
+
+.logo {
+	color: $text-color-300;
+	font-size: 1.5em;
+	line-height: 55px;
+	@include breakpoint(tablet) {
+		float: left; 
+	}
+	&:hover {
+		color: #000;
+	}
+}
+
+.section-stage {
+	height: 500px;
+	background: url("../img/header-blurred.jpg") no-repeat center center #000;
+	padding: 100px 20px 0 20px;
+	background-size: cover;
+	color: #fff;
+	.text {
+		@include breakpoint(tablet) {
+			margin-left: 100px;
+		}
+		max-width: 460px;
+		h1 {
+			@include breakpoint(tablet) {
+				font-size: 4em;
+			}
+			margin: 0;
+			font-size: 3.5em;
+			line-height: 1em;
+			font-weight: 200;
+		}
+		h4 {
+			margin: 0;
+			font-size: 1.35em;
+			line-height: 1.3;
+			font-weight: 300;
+		}
+	}
+}
+
+.subheader {
+	text-align: center;
+	max-width: 675px;
+	margin: 75px auto;
+	font-size: 1.5em;
+	line-height: 1.4em;
+	font-weight: 200;
 }
 
 .section-main {
-	@include breakpoint(tablet) {
-		@include span(8);
-	}
+	margin: 45px 0 25px;
 }
 
 .aside-main {
