--- a/source/assemble/content/_pages/index.hbs
+++ b/source/assemble/content/_pages/index.hbs
@@ -2,14 +2,26 @@
 title: "Home"
 ---
 
-<h4 class="subheader">There’s so much shiny awesomeness in this release we think it speaks for itself. In case it doesn’t though, here’s a rundown on some of the new (and existing) features in the first, most-advanced responsive framework out there.</h4>
+<section class="section-stage">
+	<div class="page-wrapper">
+		<div class="text">
+			<h1>The Fastest Boilerplate Yet.</h1>
+			<br>
+			<h4>Boilerplate is our fastest, best build yet. It’s packed with features to help you code and learn faster than ever before.</h4>
+		</div>
+		<div class="image">
+			<img src="img/phone.png" alt="">
+		</div>
+	</div>
+</section>
 
-<hr>
-
-<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quo at, quasi, maxime excepturi rem sapiente reprehenderit, atque accusamus quos temporibus distinctio omnis qui itaque praesentium sed? Dignissimos similique, esse.</p>
-
-<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
-
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quo at, quasi, maxime excepturi rem sapiente reprehenderit, atque accusamus quos temporibus distinctio omnis qui itaque praesentium sed? Dignissimos similique, esse.</p>
+<section class="section-main">
+	<div class="page-wrapper">
+		<h4 class="subheader">There’s so much shiny awesomeness in this release we think it speaks for itself. In case it doesn’t though, here’s a rundown on some of the new (and existing) features in the first, most-advanced responsive framework out there.</h4>
+		<hr>
+		<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quo at, quasi, maxime excepturi rem sapiente reprehenderit, atque accusamus quos temporibus distinctio omnis qui itaque praesentium sed? Dignissimos similique, esse.</p>
+		<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quo at, quasi, maxime excepturi rem sapiente reprehenderit, atque accusamus quos temporibus distinctio omnis qui itaque praesentium sed? Dignissimos similique, esse.</p>
+	</div>
+</section>
