--- a/source/sass/_template.scss
+++ b/source/sass/_template.scss
@@ -27,15 +27,19 @@ body {
 
 .section-stage {
 	height: 500px;
+	overflow: hidden;
 	background: url("../img/header-blurred.jpg") no-repeat center center #000;
 	padding: 100px 20px 0 20px;
 	background-size: cover;
 	color: #fff;
 	.text {
+		max-width: 555px;
 		@include breakpoint(tablet) {
-			margin-left: 100px;
+			padding-left: 100px;
 		}
-		max-width: 460px;
+		@include breakpoint(desktop) {
+			@include span(7);
+		}
 		h1 {
 			@include breakpoint(tablet) {
 				font-size: 4em;
@@ -50,6 +54,13 @@ body {
 			font-size: 1.35em;
 			line-height: 1.3;
 			font-weight: 300;
+		}
+	}
+	.image {
+		display: none;
+		@include breakpoint(desktop) {
+			display: block;
+			@include span(5 last);
 		}
 	}
 }
