responsive navigation added

--- a/source/assemble/content/_pages/index.hbs
+++ b/source/assemble/content/_pages/index.hbs
@@ -10,7 +10,7 @@ title: "Home"
 			<h4>Boilerplate is our fastest, best build yet. It’s packed with features to help you code and learn faster than ever before.</h4>
 		</div>
 		<div class="image">
-			<img src="img/phone.png" alt="">
+			<img src="img/iphone-white.png" alt="">
 		</div>
 	</div>
 </section>
