responsive navigation lvl2 toggle

--- a/source/assemble/templates/partials/site-nav.hbs
+++ b/source/assemble/templates/partials/site-nav.hbs
@@ -1,9 +1,9 @@
 <span class="menu-toggle">Menu</span>
 <nav class="nav-main">
-	<ul>
+	<ul class="lvl-1">
 		<li{{#is basename "index"}} class="active"{{/is}}>
 			<a href="index.html">Learn</a>
-			<ul>
+			<ul class="lvl-2">
 				<li><a href="index.html">Features</a></li>
 				<li><a href="index.html">FAQ</a></li>
 				<li><a href="index.html">Case Studies</a></li>
