--- a/source/sass/mixins/_breakpoints.scss
+++ b/source/sass/mixins/_breakpoints.scss
@@ -19,4 +19,7 @@
 		// 37.5 x 16px = 600px
 		@media (max-width: 37.5em)  { @content; }
 	}
+	@else if $point == touchonly {
+		@media (max-width: 70em)  { @content; }
+	}
 }
