--- a/source/sass/_navigation.scss
+++ b/source/sass/_navigation.scss
@@ -7,27 +7,50 @@ $menu-line-height: 	45px;
 	padding: $menu-padding;
 	display: block;
 	cursor: pointer;
-	@include breakpoint(desktop) {
+	@include breakpoint(tablet) {
+		display: none;
+	}
+}
+
+.sub-toggle {
+	display: block;
+	width: 40px;
+	height: 40px;
+	line-height: 30px;
+	text-align: center;
+	position: absolute;
+	right: 15px;
+	top: 0;
+	font-weight: bold;
+	font-size: 2em;
+	cursor: pointer;
+	@include breakpoint(tablet) {
 		display: none;
 	}
 }
 
 .nav-main {
-
-	float: right;
+	float: left;
+	width: 100%;
+	@include breakpoint(tablet) {
+		float: right;
+		width: auto;
+	}
 
 	ul {
 		display: none;
 		padding: 0;
 		margin: 0;
-		@include breakpoint(desktop) {
+		@include breakpoint(tablet) {
 			display: block;
 		}
-
 		@include clearfix;
 
 		li {
 			list-style: none;
+			@include breakpoint(touchonly) {
+				position: relative;
+			}
 			@include breakpoint(tablet) {
 				float: left;
 			}
@@ -35,26 +58,34 @@ $menu-line-height: 	45px;
 			a {
 				display: block;
 				font-size: $nav-font-size;
+				text-align: center;
+				line-height: 40px;
+				&:hover {
+					color: $text-color-100;
+				}
 				@include breakpoint(tablet) {
-					&:hover {
-						color: $text-color-100;
-					}
 					padding: $menu-padding;
+					line-height: 1.8em;
 				}
 			}
 
 			&:hover {
 				@include breakpoint(tablet) {
+
 					a {
 						background: $nav-hover-bg;
+						text-align: left;
 					}
+
 					ul {
 						display: block;
 						position: absolute;
 						background: $nav-ul-bg;
+
 						li {
 							float: none;
 						}
+
 						a {
 							background: none;
 							padding: $menu-padding-lr;
@@ -66,10 +97,10 @@ $menu-line-height: 	45px;
 					}
 				}
 			}
-
 		}
 
 		ul {
+			background: #111;
 			@include breakpoint(tablet) {
 				display: none;
 			}
