--- a/source/sass/_template.scss
+++ b/source/sass/_template.scss
@@ -11,6 +11,12 @@ body {
 
 .header-main {
 	background: #222;
+	.page-wrapper {
+		padding: 0;
+		@include breakpoint(tablet) {
+			padding: 0 15px;
+		}
+	}
 }
 
 .logo {
@@ -18,6 +24,10 @@ body {
 	font-size: 1.5em;
 	line-height: 55px;
 	float: left;
+	margin-left: 15px;
+	@include breakpoint(tablet) {
+		margin: 0px;
+	}
 	&:hover {
 		color: #000;
 	}
