--- a/source/assemble/templates/partials/site-nav.hbs
+++ b/source/assemble/templates/partials/site-nav.hbs
@@ -13,9 +13,36 @@
 				<li><a href="index.html">About</a></li>
 			</ul>
 		</li>
-		<li{{#is basename "page2"}} class="active"{{/is}}><a href="page2.html">Develop</a></li>
-		<li{{#is basename "page3"}} class="active"{{/is}}><a href="page3.html">Support</a></li>
-		<li{{#is basename "page4"}} class="active"{{/is}}><a href="page4.html">Buisness</a></li>
+		<li{{#is basename "page2"}} class="active"{{/is}}>
+			<a href="page2.html">Develop</a>
+			<ul class="lvl-2">
+				<li><a href="index.html">Add-ons</a></li>
+				<li><a href="index.html">Docs</a></li>
+				<li><a href="index.html">Download</a></li>
+				<li><a href="index.html">Contribute</a></li>
+				<li><a href="index.html">Resources</a></li>
+			</ul>
+		</li>
+		<li{{#is basename "page3"}} class="active"{{/is}}>
+			<a href="page3.html">Support</a>
+			<ul class="lvl-2">
+				<li><a href="index.html">Support Channels</a></li>
+				<li><a href="index.html">Boilerplate Forum</a></li>
+				<li><a href="index.html">Download</a></li>
+				<li><a href="index.html">Images & Badges</a></li>
+			</ul>
+		</li>
+		<li{{#is basename "page4"}} class="active"{{/is}}>
+			<a href="page4.html">Buisness</a>
+			<ul class="lvl-2">
+				<li><a href="index.html">Services</a></li>
+				<li><a href="index.html">Certification</a></li>
+				<li><a href="index.html">Business Support</a></li>
+				<li><a href="index.html">Engineering Studios</a></li>
+				<li><a href="index.html">Business Training</a></li>
+				<li><a href="index.html">Design Apps</a></li>
+			</ul>
+		</li>
 		<li{{#is basename "page5"}} class="active"{{/is}}><a href="page5.html">Docs</a></li>
 	</ul>
 </nav>
