colors variables changed for testing

--- a/source/sass/_navigation.scss
+++ b/source/sass/_navigation.scss
@@ -100,7 +100,7 @@ $menu-line-height: 	45px;
 		}
 
 		ul {
-			background: #111;
+			background: $nav-mobile-lvl2-bg;
 			@include breakpoint(tablet) {
 				display: none;
 			}
