--- a/source/sass/variables/_colors.scss
+++ b/source/sass/variables/_colors.scss
@@ -1,9 +1,13 @@
-$text-color-100: 	#666;
-$text-color-200: 	#fff;
-$text-color-300: 	#000;
+$logo-color: 			#bbb;
+$logo-color-hover: 		#aaa;
 
-$link-color-100: 	#666;
+$text-color-100: 		#666;
+$text-color-200: 		#fff;
+$text-color-300: 		#000;
 
-$header-bg: 		#222;
-$nav-ul-bg: 		#222;
-$nav-hover-bg: 		#111;
+$link-color-100: 		#666;
+
+$header-bg: 			#fff;
+$nav-ul-bg: 			#ddd;
+$nav-hover-bg: 			#eee;
+$nav-mobile-lvl2-bg: 	#eee;
