--- a/source/sass/variables/_colors.scss
+++ b/source/sass/variables/_colors.scss
@@ -8,6 +8,7 @@ $text-color-300: 		#000;
 $link-color-100: 		#666;
 
 $header-bg: 			#fff;
-$nav-ul-bg: 			#ddd;
+
 $nav-hover-bg: 			#eee;
+$nav-ul-bg: 			#eee;
 $nav-mobile-lvl2-bg: 	#eee;
