--- a/source/assemble/templates/layouts/page.hbs
+++ b/source/assemble/templates/layouts/page.hbs
@@ -6,4 +6,45 @@
 		</div>
 	</header>
 	{{>body}}
+	<footer class="footer-main">
+		<div class="page-wrapper">
+			<div class="col">
+				<nav>
+					<ul>
+						<li><a href="">About</a></li>
+						<li><a href="">How It Works</a></li>
+						<li><a href="">Blog</a></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="col">
+				<nav>
+					<ul>
+						<li><a href="">FAQ</a></li>
+						<li><a href="">Support</a></li>
+						<li><a href="">Contact</a></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="col">
+				<nav>
+					<ul>
+						<li><a href="">Partner With Us</a></li>
+						<li><a href="">Developers</a></li>
+					</ul>
+				</nav>
+			</div>
+			<div class="col last">
+				<nav>
+					<ul>
+						<li><a href="">facebook</a></li>
+						<li><a href="">twitter</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+		<div class="footer-bottom page-wrapper">
+			Copyright &copy; 2014 Company, Inc  • <a href="">Privacy</a> • <a href="">Terms</a>
+		</div>
+	</footer>
 {{>html-footer}}
