--- a/source/sass/variables/_colors.scss
+++ b/source/sass/variables/_colors.scss
@@ -1,14 +1,19 @@
-$logo-color: 			#bbb;
-$logo-color-hover: 		#aaa;
+$logo-color: 				#bbb;
+$logo-color-hover: 			#aaa;
 
-$text-color-100: 		#666;
-$text-color-200: 		#fff;
-$text-color-300: 		#000;
+$text-color-100: 			#666;
+$text-color-200: 			#fff;
+$text-color-300: 			#000;
 
-$link-color-100: 		#666;
+$link-color-100: 			#666;
 
-$header-bg: 			#fff;
+$header-bg: 				#fff;
 
-$nav-hover-bg: 			#eee;
-$nav-ul-bg: 			#eee;
-$nav-mobile-lvl2-bg: 	#eee;
+$nav-hover-bg: 				#eee;
+$nav-ul-bg: 				#eee;
+$nav-mobile-lvl2-bg: 		#eee;
+
+$footer-bg: 				#222;
+$footer-text-color: 		#666;
+$footer-link-color: 		#aaa;
+$footer-link-color-hover: 	#fff;
