--- a/source/sass/_basics.scss
+++ b/source/sass/_basics.scss
@@ -39,6 +39,16 @@ hr {
 	height: 0;
 }
 
+nav {
+	ul {
+		padding: 0;
+		margin: 0;
+		li {
+			list-style: none;
+		}
+	}
+}
+
 .page-wrapper {
 	@include clearfix;
 	max-width: $page-wrapper-width;
