--- a/source/sass/variables/_colors.scss
+++ b/source/sass/variables/_colors.scss
@@ -13,6 +13,8 @@ $nav-hover-bg: 				#eee;
 $nav-ul-bg: 				#eee;
 $nav-mobile-lvl2-bg: 		#eee;
 
+$feature-bg: 				#f1f2f3;
+
 $footer-bg: 				#222;
 $footer-text-color: 		#666;
 $footer-link-color: 		#aaa;
