--- a/source/sass/variables/_typography.scss
+++ b/source/sass/variables/_typography.scss
@@ -1,9 +1,10 @@
 /* $base-fontfamily: Sans-Serif; */
-$base-fontfamily: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+/* $base-fontfamily: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif; */
+$base-fontfamily: 'Source Sans Pro', "Helvetica", Helvetica, Arial, sans-serif;
 
 $base-fontweight: normal;
-$base-fontsize: 16px;
+$base-fontsize: 17px;
 $base-lineheight: 1.6em;
 
-$nav-font-size: 14px;
+$nav-font-size: 17px;
 $nav-font-size-mobile: 16px;
