--- a/source/assemble/templates/partials/html-header.hbs
+++ b/source/assemble/templates/partials/html-header.hbs
@@ -7,7 +7,9 @@
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
+	
 	<script src="js/vendor/modernizr.min.js"></script>
 </head>
 <body>
