--- a/source/sass/_content-elements.scss
+++ b/source/sass/_content-elements.scss
@@ -1,6 +1,93 @@
+.button {
+	border: 3px solid #ccc;
+	padding: 8px 16px;
+	text-transform: uppercase;
+	display: block;
+	&:hover {
+		border-color: #000;
+	}
+}
+
 .divider {
 	background: url("../img/divider.png") center center no-repeat;
 	height: 19px;
 	margin: 25px 0;
 	width: 100%;
+}
+
+.subheader {
+	text-align: center;
+	max-width: 800px;
+	margin: 75px auto;
+	font-size: 1.75em;
+	line-height: 1.4em;
+	font-weight: 200;
+}
+
+.feature-cards {
+	margin: 0;
+	padding: 0;
+	li {
+		list-style: none;
+		background: #fff;
+		@include breakpoint(desktop) {
+			@include span(4);
+		}
+		.feature-card {
+			position: relative;
+			margin: 0 0 25px;
+			padding: 0;
+			@include clearfix;
+			h3 {
+				margin: 0 0 15px;
+				font-size: 24px; 
+			}
+			.image-wrap {
+				max-height: 230px;
+				overflow: hidden;
+				@include breakpoint(tablet) {
+					max-height: 360px;
+					@include span(5);
+				}
+				@include breakpoint(desktop) {
+					max-height: 230px;
+					@include span(12);
+				}
+				img {
+					display: block;
+					width: 100%;
+				}
+			}
+			.content {
+				padding: 15px 15px 50px;
+				@include breakpoint(tablet) {
+					@include span(7 last);
+				}
+				@include breakpoint(desktop) {
+					@include span(12);
+					min-height: 420px;
+				}
+			}
+			.button {
+				width: 100%;
+				max-width: 250px;
+				text-align: center;
+				font-weight: bold;
+				margin: 0 auto;
+				@include breakpoint(desktop) {
+					text-align: center;
+					position: absolute;
+					bottom: 10px;
+					left: 50%;
+					width: 250px;
+					margin-left: -125px;
+				}
+			}
+		}
+		&:last-child {
+			@include breakpoint(desktop) {
+				@include span(4 last);
+			}
+		}
+	}
 }
