--- a/source/sass/_navigation.scss
+++ b/source/sass/_navigation.scss
@@ -9,6 +9,7 @@
 }
 
 .sub-toggle {
+	font-family: sans-serif;
 	display: block;
 	width: 100%;
 	height: 40px;
@@ -43,7 +44,7 @@
 
 		li {
 			list-style: none;
-			@include breakpoint(touchonly) {
+			@include breakpoint(mobileonly) {
 				position: relative;
 			}
 			@include breakpoint(tablet) {
