--- a/source/sass/_template.scss
+++ b/source/sass/_template.scss
@@ -18,6 +18,7 @@ body {
 	@include breakpoint(tablet) {
 		position: fixed;
 		width: 100%;
+		z-index: 999;
 		top: 0;
 	}
 	.page-wrapper {
@@ -45,7 +46,8 @@ body {
 .section-stage {
 	height: 500px;
 	overflow: hidden;
-	background: url("../img/header-blurred.jpg") no-repeat center center #000;
+	/* background: url("../img/header-blurred.jpg") no-repeat center center #000; */
+	background: #202020;
 	padding: 100px 20px 0 20px;
 	background-size: cover;
 	color: #fff;
@@ -82,13 +84,9 @@ body {
 	}
 }
 
-.subheader {
-	text-align: center;
-	max-width: 675px;
-	margin: 75px auto;
-	font-size: 1.5em;
-	line-height: 1.4em;
-	font-weight: 200;
+.section-feature {
+	background: $feature-bg;
+	padding: 50px 0;
 }
 
 .section-main {
