crossbrowser optimization, partial structure changed, breakpoints fixed

--- a/source/assemble/content/_pages/page2.hbs
+++ b/source/assemble/content/_pages/page2.hbs
@@ -10,3 +10,5 @@ title: "Page2"
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum quo at, quasi, maxime excepturi rem sapiente reprehenderit, atque accusamus quos temporibus distinctio omnis qui itaque praesentium sed? Dignissimos similique, esse.</p>
 	</div>
 </section>
+
+{{>section-feature}}
