--- a/source/assemble/content/_pages/index.hbs
+++ b/source/assemble/content/_pages/index.hbs
@@ -21,53 +21,4 @@ title: "Home"
 	</div>
 </section>
 
-<section class="section-feature">
-	<div class="page-wrapper">
-		<ul class="feature-cards">
-			<li>
-				<div class="feature-card">
-					<div class="image-wrap">
-						<img src="img/320x460.jpg" alt="">
-					</div>
-					<div class="content">
-						<h3>Send Help and Hope for Thanksgiving</h3>
-						<p>The holidays should bring a promise of hope and joy. But many of our neighbors continue to suffer the heartbreaking effects of poverty. Your gift today can place food on a hungry family’s table, shelter a homeless neighbor, or provide other vital services to those in greatest need. Please answer someone’s prayers this Thanksgiving.</p>
-						<a href="" class="button">learn more</a>
-					</div>
-				</div>
-			</li>
-			<li>
-				<div class="feature-card">
-					<div class="image-wrap">
-						<img src="img/320x460.jpg" alt="">
-					</div>
-					<div class="content">
-						<h3>Glen Campbell's Goodbye Tour - A Moving Account of Alzheimer's</h3>
-						<p>As part of its ongoing work with people with Alzheimer’s and their families and caregivers, Volunteers of America is supporting the documentary feature film, “I’ll Be Me,” chronicling Glen Campbell’s Goodbye Tour.</p>
-						<a href="" class="button">learn more</a>
-					</div>
-				</div>
-			</li>
-			<li>
-				<div class="feature-card">
-					<div class="image-wrap">
-						<img src="img/320x460.jpg" alt="">
-					</div>
-					<div class="content">
-						<h3>Providing Affordable Housing</h3>
-						<p>We believe in the power of housing as the foundation for life. And as a nonprofit provider of quality, affordable housing for low and moderate-income households, we create and manage housing for the homeless, families with children, the elderly, and people with disabilities, including physical and mental disabilities and veterans and their families.</p>
-						<a href="" class="button">learn more</a>
-					</div>
-				</div>
-			</li>
-		</ul>
-	</div>
-</section>
-
-<section class="section-main">
-	<div class="page-wrapper">
-		<h3>Headline</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam officia repudiandae totam accusantium laboriosam ipsa accusamus ex temporibus atque, laudantium, qui consectetur sequi labore porro ea veniam optio! Enim, voluptate!</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae at dicta delectus, consectetur aliquid laborum ratione distinctio necessitatibus vero non enim, placeat rerum veritatis eligendi. Rerum, voluptatem amet doloribus nihil!</p>
-	</div>
-</section>
+{{>section-feature}}
