--- a/source/assemble/templates/partials/html-header.hbs
+++ b/source/assemble/templates/partials/html-header.hbs
@@ -11,5 +11,8 @@
 	<link rel="stylesheet" href="css/main.css">
 	
 	<script src="js/vendor/modernizr.min.js"></script>
+	<!--[if lt IE 9]>
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+	<![endif]-->
 </head>
 <body>
