--- a/source/sass/_content-elements.scss
+++ b/source/sass/_content-elements.scss
@@ -19,7 +19,7 @@
 	text-align: center;
 	max-width: 800px;
 	margin: 75px auto;
-	font-size: 1.75em;
+	font-size: 1.6em;
 	line-height: 1.4em;
 	font-weight: 200;
 }
@@ -65,7 +65,7 @@
 				}
 				@include breakpoint(desktop) {
 					@include span(12);
-					min-height: 420px;
+					min-height: 440px;
 				}
 			}
 			.button {
@@ -74,6 +74,9 @@
 				text-align: center;
 				font-weight: bold;
 				margin: 0 auto;
+				@include breakpoint(tablet) {
+					margin: 0;
+				}
 				@include breakpoint(desktop) {
 					text-align: center;
 					position: absolute;
@@ -84,7 +87,7 @@
 				}
 			}
 		}
-		&:last-child {
+		&.last-child {
 			@include breakpoint(desktop) {
 				@include span(4 last);
 			}
