--- a/source/assemble/content/_pages/index.hbs
+++ b/source/assemble/content/_pages/index.hbs
@@ -5,9 +5,9 @@ title: "Home"
 <section class="section-stage">
 	<div class="page-wrapper">
 		<div class="text">
-			<h1>The Fastest Boilerplate Yet.</h1>
+			<h1>Lorem ipsum dolor sit amet.</h1>
 			<br>
-			<h4>Boilerplate is our fastest, best build yet. It’s packed with features to help you code and learn faster than ever before.</h4>
+			<h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum rerum accusantium tempora aut est, ducimus quibusdam in sed.</h4>
 		</div>
 		<div class="image">
 			<img src="img/iphone-white.png" alt="">
@@ -17,7 +17,7 @@ title: "Home"
 
 <section class="section-teaser">
 	<div class="page-wrapper">
-		<h4 class="subheader">There’s so much shiny awesomeness in this release we think it speaks for itself. In case it doesn’t though, here’s a rundown on some of the new (and existing) features in the first, most-advanced responsive framework out there.</h4>
+		<h4 class="subheader">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam hic minima asperiores, possimus dolorum rerum, assumenda quisquam nulla accusamus tempore iste perspiciatis nostrum rem! Necessitatibus illum aperiam vel, repellat culpa!</h4>
 	</div>
 </section>
 
