--- a/source/assemble/templates/partials/section-feature.hbs
+++ b/source/assemble/templates/partials/section-feature.hbs
@@ -7,8 +7,8 @@
 						<img src="img/320x460.jpg" alt="">
 					</div>
 					<div class="content">
-						<h3>Send Help and Hope for Thanksgiving</h3>
-						<p>The holidays should bring a promise of hope and joy. But many of our neighbors continue to suffer the heartbreaking effects of poverty. Your gift today can place food on a hungry family’s table, shelter a homeless neighbor, or provide other vital services to those in greatest need. Please answer someone’s prayers this Thanksgiving.</p>
+						<h3>Lorem ipsum dolor sit amet</h3>
+						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit.</p>
 						<a href="" class="button">learn more</a>
 					</div>
 				</div>
@@ -19,8 +19,8 @@
 						<img src="img/320x460.jpg" alt="">
 					</div>
 					<div class="content">
-						<h3>Glen Campbell's Goodbye Tour - A Moving Account of Alzheimer's</h3>
-						<p>As part of its ongoing work with people with Alzheimer’s and their families and caregivers, Volunteers of America is supporting the documentary feature film, “I’ll Be Me,” chronicling Glen Campbell’s Goodbye Tour.</p>
+						<h3>Lorem ipsum dolor sit amet</h3>
+						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit.</p>
 						<a href="" class="button">learn more</a>
 					</div>
 				</div>
@@ -31,8 +31,8 @@
 						<img src="img/320x460.jpg" alt="">
 					</div>
 					<div class="content">
-						<h3>Providing Affordable Housing</h3>
-						<p>We believe in the power of housing as the foundation for life. And as a nonprofit provider of quality, affordable housing for low and moderate-income households, we create and manage housing for the homeless, families with children, the elderly, and people with disabilities, including physical and mental disabilities and veterans and their families.</p>
+						<h3>Lorem ipsum dolor sit amet</h3>
+						<p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit.</p>
 						<a href="" class="button">learn more</a>
 					</div>
 				</div>
