--- a/source/assemble/templates/partials/html-header.hbs
+++ b/source/assemble/templates/partials/html-header.hbs
@@ -10,7 +10,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/main.css">
 	
-	<script src="js/vendor/modernizr.min.js"></script>
+	<script src="js/main.js"></script>
 	<!--[if lt IE 9]>
 		<script src="http://cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 	<![endif]-->
