--- a/source/sass/_content-elements.scss
+++ b/source/sass/_content-elements.scss
@@ -19,9 +19,59 @@
 	text-align: center;
 	max-width: 800px;
 	margin: 75px auto;
-	font-size: 1.6em;
 	line-height: 1.4em;
 	font-weight: 200;
+	font-size: 1.4em;
+	@include breakpoint(desktop) {
+		font-size: 1.6em;
+	}
+}
+
+.section-stage {
+	overflow: hidden;
+	background: #202020;
+	padding: 100px 20px 0 20px;
+	background-size: cover;
+	color: #fff;
+	@include breakpoint(tablet) {
+		height: 500px;
+	}
+	.text {
+		max-width: 555px;
+		@include breakpoint(tablet) {
+			padding-left: 100px;
+		}
+		@include breakpoint(desktop) {
+			@include span(7);
+		}
+		h1 {
+			margin: 0;
+			font-size: 2em;
+			line-height: 1em;
+			font-weight: 200;
+			@include breakpoint(tablet) {
+				font-size: 4em;
+			}
+		}
+		h4 {
+			margin: 0 0 50px;
+			font-size: 1.4em;
+			line-height: 1.3;
+			font-weight: 300;
+		}
+	}
+	.image {
+		display: none;
+		@include breakpoint(desktop) {
+			display: block;
+			@include span(5 last);
+		}
+	}
+}
+
+.section-feature {
+	background: $feature-bg;
+	padding: 50px 0;
 }
 
 .feature-cards {
