--- a/source/sass/_navigation.scss
+++ b/source/sass/_navigation.scss
@@ -17,7 +17,7 @@
 	text-align: right;
 	position: absolute;
 	right: 15px;
-	top: 0;
+	top: 4px;
 	font-size: 1.5em;
 	cursor: pointer;
 	@include breakpoint(tablet) {
