preview and readme updated

--- a/source/assemble/templates/layouts/page.hbs
+++ b/source/assemble/templates/layouts/page.hbs
@@ -1,7 +1,7 @@
 {{>html-header}}
 	<header class="header-main">
 		<div class="page-wrapper">
-			<a href="/" class="logo">boilerplate</a>
+			<a href="/" class="logo">tempalte</a>
 			{{>site-nav}}
 		</div>
 	</header>
@@ -45,6 +45,7 @@
 		</div>
 		<div class="footer-bottom page-wrapper">
 			Copyright &copy; 2014 Company, Inc  • <a href="">Privacy</a> • <a href="">Terms</a>
+			<br>Build with <a href="https://github.com/Refugee/grunt-template">this</a>
 		</div>
 	</footer>
 {{>html-footer}}
